tests/cases/compiler/ClassDeclaration24/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.7.3/tests/cases/compiler/ClassDeclaration24.ts`, Apache-2.0 License

class any { //~ERROR: Class name cannot be 'any'.
}